--- a/ITPE3200X/Views/Shared/_Layout.cshtml
+++ b/ITPE3200X/Views/Shared/_Layout.cshtml
@@ -9,10 +9,10 @@
 </head>
 <body>
 <header>
-    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-dark border-bottom box-shadow py-3 mb-3" style="box-shadow: 0 6px 8px -4px lightblue;">
+    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-dark border-bottom py-3 mb-3" style="box-shadow: 0 6px 8px -4px lightblue;">
         <div class="container-fluid">
-            <a class="navbar-brand text-white" asp-area="" asp-controller="Home" asp-action="Index">
-                <img src="~/Icons-images/icon.png" alt="huh" style="height: 1em; vertical-align: middle; margin-right: 5px;">
+            <a class="navbar-brand text-white fs-4 px-3" asp-area="" asp-controller="Home" asp-action="Index">
+                <img src="~/Icons-images/icon.png" alt="huh" style="height: 1.4em; vertical-align: middle; margin-right: 5px;"><class></class>
                 Kage
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
