--- a/ITPE3200X/Views/Shared/_LoginPartial.cshtml
+++ b/ITPE3200X/Views/Shared/_LoginPartial.cshtml
@@ -13,17 +13,15 @@
         </a>
     </li>
     <li class="nav-item">
-        <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-            <button id="logout" type="submit" class="nav-link btn btn-link text-dark border-0">Logout</button>
-        </form>
+        <a id="profileview" class="nav-link text-white" asp-area="Identity" asp-page="/Account/Profile/_ProfileView" title="Profile View">
+            <img src="/lib/bootstrap/bootstrap-icon/person.svg" alt="Profile Icon" style="height: 2em; vertical-align: middle; margin-right: 5px; filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(100%) contrast(100%);">
+        </a>
     </li>
 }
 else
 {
     <li class="nav-item">
-        <a class="nav-link text-light" id="login" asp-area="Identity" asp-page="/Account/Login">
-            <img src="/lib/bootstrap/bootstrap-icon/person.svg" alt="Person Icon" style="height: 2em; vertical-align: middle; margin-right: 5px; filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(100%) contrast(100%);">
-        </a>    
+        <a class="nav-link text-light display-3" id="login" asp-area="Identity" asp-page="/Account/Login">Login</a>    
     </li>
 }
 </ul>
