Lagt til et eksempel på hvordan man skal bruke kontroller med repository.

--- a/ITPE3200X/Views/Home/Profile.cshtml
+++ b/ITPE3200X/Views/Home/Profile.cshtml
@@ -1,15 +1,15 @@
 <div class="profile-page">
     <div class="profile-header">
-        <img src="@Model.ProfilePictureUrl" alt="Profile Picture" class="profile-pic"/>
-        <h1>@Model.UserName</h1>
-        <p>@Model.Bio</p>
+        <img src="" alt="Profile Picture" class="profile-pic"/>
+        <h1>Herman</h1>
+        <p>ChadGPT superhuman</p>
     </div>
     <div class="profile-stats">
-        <span>@Model.FollowersCount followers</span>
-        <span>@Model.FollowingCount following</span>
+        <span>1000000 followers</span>
+        <span>10 following</span>
     </div>
     <div class="profile-details">
-        <p>Email: @Model.Email</p>
+        <p>Email: herman.rov@gmail.com</p>
     </div>
 </div>
 
