driver av å tester ut litt med left side menu, one step at a time

--- a/ITPE3200X/Views/Home/Profile.cshtml
+++ b/ITPE3200X/Views/Home/Profile.cshtml
@@ -1,15 +1,15 @@
 <div class="profile-page">
     <div class="profile-header">
-        <img src="@Model.ProfilePictureUrl" alt="Profile Picture" class="profile-pic"/>
-        <h1>@Model.UserName</h1>
-        <p>@Model.Bio</p>
+        <img src="/lib/bootstrap/bootstrap-icon/person.svg" alt="Profile Picture" class="profile-pic" style="height: 10rem"/>
+        <h1>Lud</h1>
+        <p>Hei på deg</p>
     </div>
     <div class="profile-stats">
-        <span>@Model.FollowersCount followers</span>
-        <span>@Model.FollowingCount following</span>
+        <span>55 followers</span>
+        <span>1 following</span>
     </div>
     <div class="profile-details">
-        <p>Email: @Model.Email</p>
+        <p>Email: mail@mail.com</p>
     </div>
 </div>
 
