--- a/ITPE3200X/Views/Shared/_LoginPartial.cshtml
+++ b/ITPE3200X/Views/Shared/_LoginPartial.cshtml
@@ -21,7 +21,7 @@
 else
 {
     <li class="nav-item">
-        <a class="nav-link text-light display-3" id="login" asp-area="Identity" asp-page="/Account/Login">Login</a>    
+        <a class="nav-link text-light" style="font-size: 1.4rem" id="login" asp-area="Identity" asp-page="/Account/Login">Login</a>    
     </li>
 }
 </ul>
