fiksa linker i side menu til de sidene vi har gående hittil. Trenger fremdeles mer styling updates etc, men det kommer seg.

--- a/ITPE3200X/Views/Shared/_Layout.cshtml
+++ b/ITPE3200X/Views/Shared/_Layout.cshtml
@@ -48,11 +48,12 @@
                     <h3 class="text-white pb-3">Lud</h3>
                 </div>
                 <ul class="nav flex-column text-left" style="font-size: 1.4rem;">
-                    <li class="nav-item mt-3 active"><a class="nav-link" href="#">Home</a></li>
-                    <li class="nav-item mt-3"><a class="nav-link" href="#">Profile</a></li>
+                    <li class="nav-item mt-3"><a id="home" class="nav-link" asp-area="" asp-controller="Home" asp-action="Index" title="Home View">Home</a>
+                    <li class="nav-item mt-3"><a id="profile" class="nav-link" asp-area="" asp-controller="Home" asp-action="Profile" title="Profile View">Profile</a></li>
                     <li class="nav-item mt-3"><a class="nav-link" href="#">Saved</a></li>
                     <li class="nav-item mt-3"><a class="nav-link" href="#">Search</a></li>
-                    <li class="nav-item mt-3"><a class="nav-link" href="#">Settings</a></li>
+                    <li class="nav-item mt-3"><a id="settings" class="nav-link text-white" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Settings</a></li>
+
                 </ul>
             </div>
         </div>
