--- a/ITPE3200X/Views/Home/Index.cshtml
+++ b/ITPE3200X/Views/Home/Index.cshtml
@@ -4,42 +4,11 @@
     ViewData["Title"] = "Home Page";
 }
 
-<h2>Recent Posts</h2>
-
-@foreach (var post in Model)
-{
-    <div class="post">
-        <h3>@post.Title</h3>
-        <p>@post.Content</p>
-        <p>
-            Posted by @post.User.UserName on @post.CreatedAt.ToString("g")
-        </p>
-
-        @if (post.Images.Any())
+<div class="container justify-content-center">
+    <div class="column">
+        @foreach (var post in Model)
         {
-            <div class="post-images">
-                @foreach (var image in post.Images)
-                {
-                    <img src="@image.ImageUrl" alt="Post Image" style="max-width: 200px;" />
-                }
-            </div>
+            @await Html.PartialAsync("_PostPartial", post)
         }
-
-        @* Display Likes Count *@
-        <p>@post.Likes.Count() Likes</p>
-
-        @* Display Comments *@
-        @if (post.Comments.Any())
-        {
-            <h4>Comments:</h4>
-            @foreach (var comment in post.Comments)
-            {
-                <div class="comment">
-                    <p><strong>@comment.User.UserName:</strong> @comment.Content</p>
-                </div>
-            }
-        }
-
-        <hr />
     </div>
-}
+</div>
