--- a/ITPE3200X/Views/Shared/_NavLoginPartial.cshtml
+++ b/ITPE3200X/Views/Shared/_NavLoginPartial.cshtml
@@ -19,6 +19,7 @@
                 <img src="/lib/bootstrap/bootstrap-icon/person.svg" alt="Profile Icon" style="height: 2em; vertical-align: middle; margin-right: 5px; filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(100%) contrast(100%);">
             </a>
         </li>
+    /* This section is hidden on larger screen and visable on smaller screens when the side menu is hidden, works as replacement for side menu */
         <ul class="navbar-nav flex-grow-1 text-left d-lg-none d-md-none" style="font-size: 1.4rem;">
             <li class="nav-item mt-3"><a id="navhome" class="nav-link" asp-area="" asp-controller="Home" asp-action="Index" title="Home View">Home</a>
             <li class="nav-item mt-3"><a id="navprofile" class="nav-link" asp-area="" asp-controller="Home" asp-action="Profile" title="Profile View">Profile</a></li>
