Bytta farger på alt, la til side for ekstra login side før login og reg. Full size side uten nav/menu. Trenger mer styling etc, men er en start på log in/registrer side og funskjoner.

--- a/ITPE3200X/Views/Shared/_Layout.cshtml
+++ b/ITPE3200X/Views/Shared/_Layout.cshtml
@@ -6,7 +6,6 @@
     <title>@ViewData["Title"] - Kage</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="~/css/site.css"/>
-    <link rel="stylesheet" href="~/ITPE3200X.site.css" asp-append-version="true"/>
     <script src="~/js/site.js"></script>
 </head>
 <body>
@@ -33,7 +32,7 @@
 <div class="container-fluid">
     <div class="row">
         <!-- Sidebar menu -->
-        <div class="col-sm-3 bg-dark d-none d-lg-block d-md-block">
+        <div id="side-menu-row" class="col-sm-3 d-none d-lg-block d-md-block p-0">
             <partial name="_SideMenuPartial"/>
         </div>
 
