--- a/ITPE3200X/Areas/Identity/Pages/Account/LoginPage.cshtml
+++ b/ITPE3200X/Areas/Identity/Pages/Account/LoginPage.cshtml
@@ -15,14 +15,13 @@ ViewData["Title"] = "Log in";
 </head>
 <body class="vw-100 overflow-hidden">
 <a asp-page="/Index" class="btn-close btn-close-white" aria-label="Close" style="position: absolute; top: 2rem; left: 2rem; font-size: 1.8rem;"></a>
-<div class="container mt-5">
+<div class="container vh-100 align-content-center">
     <div class="row justify-content-center">
-        <div class="col-md-8 text-center">
-            <img src="~/Icons-images/kage_welcome_vector.png" alt="Vector Image" class="img-fluid my-2" style="height: 3rem">
-            <h2 class="mb-3">Share Your World, Discover Others</h2>
-            <p class="lead mb-4">Dive into a universe of images and ideas, where your creativity brings us together</p>
+        <div class="col-md-8 pt-4 text-center">
+            <h2 class="mb-3" style="color: #7cbeea">Login Here</h2>
+            <p class="lead mb-4">Welcome back you’ve been missed!</p>
 
-            <form id="account" method="post" class="card bg-transparent text-light p-4 border-0">
+            <form id="account" method="post" class="card bg-transparent text-dark p-4 border-0">
                 <h4 class="mb-3">Use a local account to log in.</h4>
                 <div class="form-floating mb-3">
                     <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com">
@@ -32,17 +31,12 @@ ViewData["Title"] = "Log in";
                     <input asp-for="Input.Password" class="form-control" autocomplete="current-password" aria-required="true" placeholder="password">
                     <label asp-for="Input.Password">Password</label>
                 </div>
-                <div class="form-check mb-4">
-                    <input class="form-check-input" asp-for="Input.RememberMe" id="rememberMe">
-                    <label class="form-check-label" for="rememberMe">
-                        @Html.DisplayNameFor(m => m.Input.RememberMe)
-                    </label>
-                </div>
-                <button id="login-submit" type="submit" class="btn btn-primary btn-lg w-100">Log in</button>
-                <div class="mt-3 text-center">
+                <div class="form-check mb-4 text-end">
                     <a id="forgot-password" asp-page="./ForgotPassword" class="text-primary">Forgot your password?</a><br>
-                    <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl" class="text-primary">Register as a new user</a><br>
-                    <a id="resend-confirmation" asp-page="./ResendEmailConfirmation" class="text-primary">Resend email confirmation</a>
+                </div>
+                <button id="login-submit" type="submit" class="loginbtn-primary btn-lg w-100">Sign in</button>
+                <div class="mt-3 text-center">
+                    <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl" class="btn btn-lg loginbtn-secondary w-100" role="button">Register</a>
                 </div>
             </form>
         </div>
@@ -56,6 +50,15 @@ ViewData["Title"] = "Log in";
 
     .row {
         justify-content: center !important;
+    }
+
+    #forgot-password {
+        color: #7CBEEA !important;
+        text-underline: none !important;
+    }
+
+    #forgot-password:hover {
+        color: #76b5e0 !important;
     }
 </style>
 </html>
