--- a/ITPE3200X/Areas/Identity/Pages/Account/LoginPage.cshtml
+++ b/ITPE3200X/Areas/Identity/Pages/Account/LoginPage.cshtml
@@ -22,21 +22,24 @@ ViewData["Title"] = "Log in";
             <p class="lead mb-4">Welcome back you’ve been missed!</p>
 
             <form id="account" method="post" class="card bg-transparent text-dark p-4 border-0">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div> <!-- Validation Summary -->
                 <h4 class="mb-3">Use a local account to log in.</h4>
                 <div class="form-floating mb-3">
                     <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com">
                     <label asp-for="Input.Email">Email</label>
+                    <span asp-validation-for="Input.Email" class="text-danger"></span>
                 </div>
                 <div class="form-floating mb-3">
                     <input asp-for="Input.Password" class="form-control" autocomplete="current-password" aria-required="true" placeholder="password">
                     <label asp-for="Input.Password">Password</label>
+                    <span asp-validation-for="Input.Password" class="text-danger"></span>
                 </div>
                 <div class="form-check mb-4 text-end">
                     <a id="forgot-password" asp-page="./ForgotPassword" class="text-primary">Forgot your password?</a><br>
                 </div>
-                <button id="login-submit" type="submit" class="loginbtn-primary btn-lg w-100">Sign in</button>
+                <button id="login-submit" type="submit" class="btn loginbtn-primary btn-lg w-100">Sign in</button>
                 <div class="mt-3 text-center">
-                    <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl" class="btn btn-lg loginbtn-secondary w-100" role="button">Register</a>
+                    <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl" class="btn loginbtn-secondary btn-lg w-100" role="button">Register</a>
                 </div>
             </form>
         </div>
@@ -61,4 +64,7 @@ ViewData["Title"] = "Log in";
         color: #76b5e0 !important;
     }
 </style>
+@section Scripts {
+<partial name="_ValidationScriptsPartial"/>
+}
 </html>
