Added comment where we can consider adding external login options. Maybe if there are some API´s that make this doable? But not focusing on it ATM

--- a/ITPE3200X/Areas/Identity/Pages/Account/LoginPage.cshtml
+++ b/ITPE3200X/Areas/Identity/Pages/Account/LoginPage.cshtml
@@ -42,6 +42,7 @@ ViewData["Title"] = "Log in";
                     <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl" class="btn loginbtn-secondary btn-lg w-100" role="button">Register</a>
                 </div>
             </form>
+            <!-- * This is the external login part, which is not implemented in this project (we could maybe find some API´s? -->
         </div>
     </div>
 </div>
