--- a/ITPE3200X/Areas/Identity/Pages/Account/LoginPage.cshtml
+++ b/ITPE3200X/Areas/Identity/Pages/Account/LoginPage.cshtml
@@ -35,7 +35,7 @@ ViewData["Title"] = "Log in";
                     <span asp-validation-for="Input.Password" class="text-danger"></span>
                 </div>
                 <div class="form-check mb-4 text-end">
-                    <a id="forgot-password" asp-page="./ForgotPassword" class="text-primary">Forgot your password?</a><br>
+                    <a id="colored-link" asp-page="./ForgotPassword" class="text-primary">Forgot your password?</a><br>
                 </div>
                 <button id="login-submit" type="submit" class="btn loginbtn-primary btn-lg w-100">Sign in</button>
                 <div class="mt-3 text-center">
@@ -56,12 +56,12 @@ ViewData["Title"] = "Log in";
         justify-content: center !important;
     }
 
-    #forgot-password {
+    #colored-link{
         color: #7CBEEA !important;
         text-underline: none !important;
     }
 
-    #forgot-password:hover {
+    #colored-link:hover {
         color: #76b5e0 !important;
     }
 </style>
