VELDIG SMÅ endringer, må fortså hvordan alt fungerer først

--- a/ITPE3200X/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
+++ b/ITPE3200X/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
@@ -11,7 +11,7 @@
     <div class="col-md-6">
         <form id="change-password-form" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
-            <div class="form-floating mb-3">
+            <div class="form-floating mb-3 mt-3">
                 <input asp-for="Input.OldPassword" class="form-control" autocomplete="current-password" aria-required="true" placeholder="Please enter your old password." />
                 <label asp-for="Input.OldPassword" class="form-label"></label>
                 <span asp-validation-for="Input.OldPassword" class="text-danger"></span>
@@ -26,10 +26,21 @@
                 <label asp-for="Input.ConfirmPassword" class="form-label"></label>
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Update password</button>
+            <button type="submit" class="btn btn-lg btn-primary">Update password</button>
         </form>
     </div>
 </div>
+
+<style>
+    .form-floating {
+        margin-top: 1rem;
+        color: #495057;
+    }
+    .form-control{
+        width: 400px;
+    }
+    
+</style>
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
