må bare teste på noen ting, ikke gjort noe dramatisk

--- a/ITPE3200X/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/ITPE3200X/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -28,3 +28,10 @@
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
+
+<style>
+    .form-floating{
+        margin-top: 1rem;
+        color: #495057;
+    }
+</style>
