--- a/ITPE3200X/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/ITPE3200X/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -14,16 +14,23 @@
     <li class="nav-item"><a class="nav-link @ManageNavPages.PersonalDataNavClass(ViewContext)" id="personal-data" asp-page="./PersonalData">Personal data</a></li>
     <li class="nav-item">
         @{
-        if (User.Identity?.IsAuthenticated ?? false)
-        {
-        <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/", new { area = "" })" method="post">
-            <button type="submit" class="nav-link btn btn-link text-dark">Click here to Logout</button>
-        </form>
-        }
-        else
-        {
-        <p>You have successfully logged out of the application.</p>
-        }
+            if (User.Identity?.IsAuthenticated ?? false)
+            {
+                <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/", new { area = "" })" method="post">
+                    <button type="submit" class="nav-link btn btn-link text-dark">Click here to Logout</button>
+                </form>
+            }
+            else
+            {
+                <p>You have successfully logged out of the application.</p>
+            }
         }
     </li>
 </ul>
+
+<style>
+    .nav-pills .nav-link:hover {
+        color: #007bff;
+    }
+    
+</style>
