--- a/ITPE3200X/Views/Home/Index.cshtml
+++ b/ITPE3200X/Views/Home/Index.cshtml
@@ -4,11 +4,9 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="container justify-content-center">
-    <div class="column">
-        @foreach (var post in Model)
-        {
-            @await Html.PartialAsync("_PostPartial", post)
-        }
-    </div>
+<div class="container">
+    @foreach (var post in Model)
+    {
+        @await Html.PartialAsync("_PostPartial", post)
+    }
 </div>
