--- a/ITPE3200X/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
+++ b/ITPE3200X/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
@@ -8,7 +8,7 @@
 <h3>@ViewData["Title"]</h3>
 <partial name="_StatusMessage" for="StatusMessage" />
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-8">
         <form id="change-password-form" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
             <div class="form-floating mb-4">
@@ -26,21 +26,10 @@
                 <label asp-for="Input.ConfirmPassword" class="form-label"></label>
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-lg btn-primary">Update password</button>
+            <button type="submit" class="w-100 btn btn-lg settingbtn">Update password</button>
         </form>
     </div>
 </div>
-
-<style>
-    .form-floating {
-        margin-top: 1rem;
-        color: #495057;
-    }
-    .form-control{
-        width: 350px;
-    }
-    
-</style>
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
