--- a/ITPE3200X/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
+++ b/ITPE3200X/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
@@ -8,16 +8,16 @@
 <h3>@ViewData["Title"]</h3>
 
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-8">
         <p>Your account contains personal data that you have given us. This page allows you to download or delete that data.</p>
         <p>
             <strong>Deleting this data will permanently remove your account, and this cannot be recovered.</strong>
         </p>
         <form id="download-data" asp-page="DownloadPersonalData" method="post">
-            <button class="btn btn-primary" type="submit">Download</button>
+            <button class="w-100 btn btn-lg settingbtn mb-3" type="submit">Download</button>
         </form>
         <p>
-            <a id="delete" asp-page="DeletePersonalData" class="btn btn-danger">Delete</a>
+            <a id="delete" asp-page="DeletePersonalData" class="w-100 btn btn-lg btn-danger">Delete</a>
         </p>
     </div>
 </div>
