--- a/ITPE3200X/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/ITPE3200X/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -9,20 +9,21 @@
     }
 }
 
-<h1>Manage your account</h1>
-
 <div>
-    <h2>Change your account settings</h2>
-    <hr />
-    <div class="row">
+    <h2 class="mt-3">Change your account settings</h2>
+    <hr/>
+    <div class="row gap-3">
         <div class="col-md-3">
             <partial name="_ManageNav" />
         </div>
-        <div class="col-md-9">
+        <div class="col-md-8">
             @RenderBody()
         </div>
     </div>
 </div>
+    
+<style>
+</style>
 
 @section Scripts {
     @RenderSection("Scripts", required: false)
