--- a/ITPE3200X/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/ITPE3200X/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -10,14 +10,13 @@
     {
         <li id="external-logins" class="nav-item"><a id="external-login" class="nav-link @ManageNavPages.ExternalLoginsNavClass(ViewContext)" asp-page="./ExternalLogins">External logins</a></li>
     }
-    <li class="nav-item"><a class="nav-link @ManageNavPages.TwoFactorAuthenticationNavClass(ViewContext)" id="two-factor" asp-page="./TwoFactorAuthentication">Two-factor authentication</a></li>
     <li class="nav-item"><a class="nav-link @ManageNavPages.PersonalDataNavClass(ViewContext)" id="personal-data" asp-page="./PersonalData">Personal data</a></li>
     <li class="nav-item">
         @{
             if (User.Identity?.IsAuthenticated ?? false)
             {
                 <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/", new { area = "" })" method="post">
-                    <button type="submit" class="nav-link btn btn-link text-dark">Click here to Logout</button>
+                    <button type="submit" class="nav-link btn btn-link text-dark mt-3">Logout</button>
                 </form>
             }
             else
@@ -29,8 +28,5 @@
 </ul>
 
 <style>
-    .nav-pills .nav-link:hover {
-        color: #007bff;
-    }
     
 </style>
