endra til at at riktig user ble henta til profile siden. også fiksa edit siden slik at den redigerer riktig profil og ikke første random

--- a/ITPE3200X/Views/Profile/Profile.cshtml
+++ b/ITPE3200X/Views/Profile/Profile.cshtml
@@ -1,4 +1,4 @@
-@using Microsoft.AspNetCore.Identity
+@model ITPE3200X.Models.ApplicationUser
 
 <div class="profile-page">
     <div class="profile-header">
