--- a/ITPE3200X/Views/Shared/_SideMenuPartial.cshtml
+++ b/ITPE3200X/Views/Shared/_SideMenuPartial.cshtml
@@ -14,7 +14,7 @@
         </div>
         <ul class="nav flex-column text-left w-100" style="font-size: 1.4rem;">
             <li class="nav-item mt-3"><a id="home" class="nav-link" asp-area="" asp-controller="Home" asp-action="Index" title="Home View">Home</a>
-            <li class="nav-item mt-3"><a id="profile" class="nav-link" asp-area="" asp-controller="Profile" asp-action="Index" title="Profile View">Profile</a></li>
+            <li class="nav-item mt-3"><a id="profile" class="nav-link" asp-area="" asp-controller="Profile" asp-action="Profile" title="Profile View">Profile</a></li>
             <li class="nav-item mt-3"><a class="nav-link" href="#">Saved</a></li>
             <li class="nav-item mt-3"><a class="nav-link" href="#">Search</a></li>
             <li class="nav-item mt-3"><a id="settings" class="nav-link text-white" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Settings</a></li>
